--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "news-scrape",
   "version": "1.0.0",
   "description": "homework week 18",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
